# robobus

./: CHANGELOG.md  CMakeLists.txt  README.md  cz.yaml  flake.nix  robobusConfig.cmake.in
docs/: Ident.md  api-note.md  fw-note  interfaces.md  network.md  note1.txt  topo-example-1.md  types.md
include/robobus/: render.hpp
include/robobus/context/: context.hpp  root_context.hpp
include/robobus/coroutine/: coroutine.hpp  promise.hpp
include/robobus/debug/: debug_adapter.hpp  debug_info.hpp
include/robobus/internal/: multi_updatable.hpp  signal.hpp
include/robobus/network/: cstream.hpp  cstream_can.hpp
include/robobus/runtime/: time_context.hpp
lib/: CMakeLists.txt
lib/bus/: CMakeLists.txt
lib/bus/include/robobus/network/: address.hpp  core.hpp  cstream.hpp  cstream_can.hpp  device_id_manager.hpp  enumerate_interface.hpp  message_id.hpp  network_can.hpp  p2p_message_id.hpp  random_name_interface.hpp  types.hpp
lib/bus/include/robobus/network/device/: device.hpp  device_feature.hpp  device_meta.hpp  device_state.hpp  device_summary.hpp
lib/bus/include/robobus/network/interface/: dummy.cpp  enumerate_interface.hpp  interface.hpp  interface_summary.hpp  irp_interface.hpp  random_name_interface.hpp  root_interface.hpp
lib/runtime/: CMakeLists.txt
lib/runtime/include/robobus/console/: interpreter.hpp
lib/runtime/include/robobus/context/: context.hpp  root_context.hpp
lib/runtime/include/robobus/coroutine/: awaitable.hpp  coroutine.hpp  coroutine_awaiter.hpp  generic_awaiter.hpp  immediacy_awaiter.hpp  inspector.hpp  promise.hpp
lib/runtime/include/robobus/debug/: debug_info.hpp
lib/runtime/include/robobus/internal/: README.md  sematicses.hpp  signal.hpp  string_literal.hpp
lib/runtime/include/robobus/monitor/: bus.hpp  entry.hpp  entry_iteratable.hpp  entry_iterator.hpp  srobo1_log.hpp  viewer.hpp
lib/runtime/include/robobus/runtime/: lazy_resumer.hpp  loop.hpp  runtime_impls.hpp  sleep.hpp
lib/source/: dummy.cpp
tools/: CMakeLists.txt  Cargo.toml
tools/src/: main.rs
